openregistry-testing/openregistry-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: openregistry-service
  name: openregistry-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    run: openregistry-deployment
  type: NodePort
status:
  loadBalancer: {}
